--- a/package.json
+++ b/package.json
@@ -25,19 +25,26 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@prisma/client": "^5.0.0",
+    "execa": "^7.2.0",
+    "password-generator": "^2.3.2",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@types/node": "^20.4.5",
+    "@typescript-eslint/parser": "^6.2.0",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.39.0",
-    "eslint-plugin-github": "^4.7.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.5.0",
+    "eslint": "^8.46.0",
+    "eslint-plugin-github": "^4.9.2",
+    "eslint-plugin-jest": "^27.2.3",
+    "jest": "^29.6.2",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "prettier": "^3.0.0",
+    "prisma": "^5.0.0",
+    "ts-jest": "^29.1.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
   }
 }
