--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@prisma/client": "^5.0.0",
-    "execa": "^7.2.0",
     "password-generator": "^2.3.2",
+    "postgres": "^3.3.5",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
@@ -42,7 +41,6 @@
     "jest": "^29.6.2",
     "js-yaml": "^4.1.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.0.0",
     "ts-jest": "^29.1.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6"
