--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          PREVIEW_DB_SERVER: ${{ secrets.PREVIEW_DB_SERVER }}
+          PREVIEW_DB_SERVER: ${{ secrets.PREVIEW_DB_SERVER_DO }}
