--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./
+        id: preview-database
         with:
           PREVIEW_DB_SERVER: ${{ secrets.PREVIEW_DB_SERVER }}
+  example_output:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Output shtuff
+      run: echo ${{ steps.preview-database.outputs.preview_database }}
